--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://gidas.vercel.app/"
+      }
     }
   ]
 }
