--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.4.0",
     "vercel": "^34.0.0"
   }
