--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "backend gidas",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=production & node server.js",
-    "dev": "SET NODE_ENV=development & nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Darjus Zukovski",
   "license": "ISC",
